# ChangeLog for media-fonts/font-misc-misc
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-fonts/font-misc-misc/ChangeLog,v 1.32 2006/07/19 14:21:16 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> font-misc-misc-1.0.0.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Mark 1.0.0 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-misc-misc-1.0.0.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-misc-misc-1.0.0.ebuild:
  x86 stable.

  06 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  files/digest-font-misc-misc-1.0.0, Manifest:
  (#135715) Fix digest.

  04 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-misc-misc-1.0.0.ebuild:
  (#133980) Add a real description (Max Lorenz).

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-misc-misc-1.0.0.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Unstable on hppa.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org>
  font-misc-misc-1.0.0.ebuild:
  Marked ~alpha

*font-misc-misc-1.0.0 (18 Dec 2005)

  18 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -font-misc-misc-0.99.2.ebuild, +font-misc-misc-1.0.0.ebuild: