@@ -1,3 +1,3 @@
-MD5 2a57f6188c41d4bc1b88ca3d08ad011d font-misc-misc-1.0.0.tar.bz2 1856323
-RMD160 be44e00d94afdba48002e259f460d6a39ffbb370 font-misc-misc-1.0.0.tar.bz2 1856323
-SHA256 26a02560ad1f1648e7c36be6daf42910762131d3974422d1b306e6cae13f17db font-misc-misc-1.0.0.tar.bz2 1856323
+MD5 4d9ea506dafe32ffd235cf94e2b25c63 font-misc-misc-1.0.0.tar.bz2 1855179
+RMD160 74d1c4e05a4e6467ae53d93872fdc4d7c3b7b4ca font-misc-misc-1.0.0.tar.bz2 1855179
+SHA256 ff5d1f6c991ce275ff73d5cacd7afabb8fa2dadb12bf8ac1ba6565cd56de77e0 font-misc-misc-1.0.0.tar.bz2 1855179
