@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-fonts/font-misc-misc/font-misc-misc-1.0.0.ebuild,v 1.14 2006/09/03 06:34:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-misc-misc/font-misc-misc-1.0.0.ebuild,v 1.15 2007/02/04 18:45:02 joshuabaergen Exp $
 
 EAPI="prefix"
 
@@ -11,7 +11,6 @@ inherit x-modular
 
 
 DESCRIPTION="X.Org miscellaneous fonts"
-RESTRICT="mirror"
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
 RDEPEND=""
 DEPEND="${RDEPEND}
